forth/test/fail/test_dot_call_plain_fmtf.af
\ Must fail to compile.
fun: test_dot_call_plain_fmtf_fail { -- err }
  stdout " bad" fmtf
end
